myapp/overlays/prod/env.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp
spec:
  template:
    spec:
      containers:
      - name: myapp
