myapp/overlays/prod/replicas.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
matadata:
  name: myapp
spec:
  replicas: 4
