myapp/overlays/prod/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: myapp-dr
spec:
  host: myapp-stable
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
