myapp/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myapp-vs
  namespace: prod
spec:
  hosts:
  - "*"
  gateways:
  - myapp-gateway

  http:
  - name: primary
    route:
    - destination:
        host: myapp
        subset: stable
      weight: 100
    - destination:
        host: myapp
        subset: canary
      weight: 0
